2015-08-13  Joseph Pecoraro  <pecoraro@apple.com>

        Web Inspector: Watch Expressions
        https://bugs.webkit.org/show_bug.cgi?id=147904

        Reviewed by Brian Burg.

        * inspector/model/remote-object-fake-object-expected.txt: Added.
        * inspector/model/remote-object-fake-object.html: Added.

2015-08-13  Brian Burg  <bburg@apple.com>

        Web Inspector: refactor ProtocolTest to be an InjectedTestHarness subclass
        https://bugs.webkit.org/show_bug.cgi?id=147954

        Reviewed by Joseph Pecoraro.

        In preparation for sharing the same test harness API between protocol tests
        and frontend tests, this patch refactors ProtocolTest into the desired
        class structure. Each type of test (currently: protocol, frontend) extends
        InjectedTestHarness and fills in a few key methods for communicating with
        the test page-side code.

        This patch standardizes on assert() only logging when the condition is false.
        Update protocol tests to use ProtocolTestHarness.expectThat, rather than assert.

        * http/tests/inspector/resources/ProtocolTestStub.js:
        (window.InjectedTestHarness):
        (window.InjectedTestHarness.prototype.createAsyncSuite):
        (window.InjectedTestHarness.prototype.createSyncSuite):
        (window.InjectedTestHarness.prototype.completeTest):
        (window.InjectedTestHarness.prototype.addResult):
        (window.InjectedTestHarness.prototype.debugLog):
        (window.InjectedTestHarness.prototype.evaluateInPage):
        (window.InjectedTestHarness.prototype.importScript):
        (window.InjectedTestHarness.prototype.get logCount):
        (window.InjectedTestHarness.prototype.log):
        (window.InjectedTestHarness.prototype.assert):
        (window.InjectedTestHarness.prototype.expectThat):
 
        (InjectedTestHarness.AsyncTestSuite): Use a stored reference to the harness
        rather than hardcoding a specific InjectedTestHarness instance.
