@@ -1,5 +1,16 @@
 2015-08-13  Joseph Pecoraro  <pecoraro@apple.com>
 
+        Web Inspector: Reduce flakiness of inspector/indexeddb/requestDatabaseNames
+        https://bugs.webkit.org/show_bug.cgi?id=148008
+
+        Reviewed by Timothy Hatcher.
+
+        * inspector/indexeddb/requestDatabaseNames.html:
+        Follow-up fix to reduce flakiness in the test caused by other tests
+        creating IndexedDB databases.
+
+2015-08-13  Joseph Pecoraro  <pecoraro@apple.com>
+
         Web Inspector: Watch Expressions
         https://bugs.webkit.org/show_bug.cgi?id=147904
 
